kubernetes/apps/phpmyadmin/deploy/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: phpmyadmin.mythbound.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
